larger mobile logo in header, fix spacing on mobile hamburger, remove transitions on mobile logos when going to sticky nav, smooth out desktop logo transitions

--- a/user/themes/cgre/css/main.css
+++ b/user/themes/cgre/css/main.css
@@ -1286,7 +1286,7 @@ form.success .status {
 }
 
 .header {
-  height: 45px;
+  height: 50px;
 }
 .header .container {
   z-index: 50;
@@ -1297,7 +1297,7 @@ form.success .status {
   }
 }
 .header button {
-  top: 15px;
+  top: 30px;
   left: 23px;
   width: 45px;
   height: 45px;
@@ -1312,10 +1312,10 @@ form.success .status {
 }
 .header .logo {
   position: absolute;
-  top: 30px;
+  top: 25px;
   right: 30px;
-  width: 180px;
-  height: 52px;
+  width: 205px;
+  height: 59px;
 }
 .header .logo img {
   display: block;
@@ -1331,31 +1331,27 @@ form.success .status {
     height: 103px;
   }
 }
-.header .logo-full {
-  transition-duration: 0.2s;
-  transition-property: all;
-  transition-timing-function: cubic-bezier(0.77, 0, 0.175, 1);
+@media screen and (min-width: 750px) {
+  .header .logo-full {
+    transition-duration: 0.2s;
+    transition-property: opacity, transform;
+    transition-timing-function: cubic-bezier(0.77, 0, 0.175, 1);
+  }
 }
 .header .logo-small {
-  transition-duration: 0.2s;
-  transition-property: all;
-  transition-timing-function: cubic-bezier(0.77, 0, 0.175, 1);
   opacity: 0;
 }
 @media screen and (min-width: 960px) {
   .header .logo-small {
+    transition-duration: 0.2s;
+    transition-property: all;
+    transition-timing-function: cubic-bezier(0.77, 0, 0.175, 1);
     transform: translateY(20px);
   }
 }
 
 body.nav-stuck {
   margin-top: 45px;
-}
-@media screen and (min-width: 960px) {
-  body.nav-stuck {
-    margin-top: 52px;
-    padding-top: 120px;
-  }
 }
 body.nav-stuck .header {
   position: fixed;
@@ -1389,10 +1385,15 @@ body.nav-stuck .header .logo {
   top: 5px;
 }
 @media screen and (min-width: 960px) {
+  body.nav-stuck {
+    margin-top: 52px;
+    padding-top: 120px;
+  }
   body.nav-stuck .logo-small {
     transform: translateY(0);
   }
   body.nav-stuck .logo-full {
+    top: -50px;
     transform: translateY(-20px);
   }
   body.nav-stuck .header {
