--- a/user/themes/cgre/scss/layouts/_header.scss
+++ b/user/themes/cgre/scss/layouts/_header.scss
@@ -4,7 +4,7 @@
   .container {
     z-index: z(header);
   }
-  height: grid(4.5);
+  height: grid(5);
 
   // Desktop styles
   @include media-nav {
@@ -12,7 +12,7 @@
   }
 
   button {
-    top: 15px;
+    top: 30px;
     left: 23px;
     width: 45px;
     height: 45px;
@@ -27,10 +27,10 @@
 
   .logo {
     position: absolute;
-    top: grid(3);
+    top: 25px;
     right: grid(3);
-    width: 180px;
-    height: 52px;
+    width: 205px;
+    height: 59px;
     img {
       display: block;
       position: absolute;
@@ -47,13 +47,15 @@
   }
 
   .logo-full {
-    @include transition(all);
+    @include media-md {
+      @include transition(opacity, transform);
+    }
   }
   .logo-small {
-    @include transition(all);
     opacity: 0;
 
     @include media-nav {
+      @include transition(all);
       transform: translateY(20px);
     }
   }
@@ -62,10 +64,7 @@
 // Nav is stuck
 body.nav-stuck {
   margin-top: 45px;
-  @include media-nav {
-    margin-top: 52px;
-    padding-top: 120px;
-  }
+
   .header {
     position: fixed;
     top: 0;
@@ -93,10 +92,13 @@ body.nav-stuck {
 
   // Desktop styles
   @include media-nav {
+    margin-top: 52px;
+    padding-top: 120px;
     .logo-small {
       transform: translateY(0);
     }
     .logo-full {
+      top: -50px;
       transform: translateY(-20px);
     }
     .header {
